# advent-of-code

./: LICENSE  README.md
2021/: d10p1.py  d10p2.py  d11p1.py  d11p2.py  d12p1.py  d12p2.py  d13p1.py  d13p2.py  d14.py  d14p1.py  d15p1.py  d15p2s2.py  d15p2s3.py  d15p2s4.py  d15p2scipy.py  d16p1.py  d16p2.py  d17p1.py  d18p1.py  d18p2.py  d19p1.py  d1p1.py  d1p2.py  d20p1.py  d21p1.py  d21p2.py  d22p1.py  d22p2.py  d23p1.py  d23p2.py  d24p1.py  d25p1.py  d2p1.py  d2p2.py  d3p1.py  d3p2.py  d4p1.py  d4p2.py  d5p1.py  d5p2.py  (+7 more)
2021/inputs/: d16.sample1  d22.toy  d23.real  d23.sample  d24.real  d24.stanza1
2022/: d02p1.py  d02p2.py  d03p1.py  d03p2.py  d04p1.py  d04p2.py  d05p1.py  d05p2.py  d06p1.py  d06p2.py  d07p2.py  d08p1.py  d08p2.py  d09p1.py  d09p2.py  d10p1.py  d10p2.py  d11p1.py  d11p2.py  d12p1.py  d12p2.py  d13p1.py  d13p2.py  d14p1.py  d14p2.py  d15p1.py  d15p2.py  d16p1.py  d16p2.py  d17p1.py  d17p2.py  d18p1.py  d18p2.py  d19p1.py  d19p2.py  d1p1.py  d1p2.py  d20p1.py  d20p2.py  d21p1.py  (+8 more)
2022/inputs/: d13.txt  d19.txt.out  d20-test2.txt
2023/: .gitignore  Cargo.toml
2023/src/: lib.rs
