[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmt = "0.1.0"
itertools = "0.12.0"
maplit = "1.0.2"
multimap = "0.9.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
num = "0.4.1"
rand = "0.8.5"
rangemap = "1.4.0"
regex = "1.10.2"
tuple = "0.5.1"
